--- a/css/style.css
+++ b/css/style.css
@@ -275,15 +275,20 @@ img {
     padding: 80px 20px;
   }
   .main h2 {
-     font-size: 1em;
+     font-size: 2em;
   }
   .main h3 {
-    font-size: 1.6em;
+    font-size: 2.3em;
   }
   .content {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    
   }
+  .product-card {
+  margin: 10px;
+}
   .main {
     padding: 100px 20px;
   }
