--- a/css/style.css
+++ b/css/style.css
@@ -271,14 +271,14 @@ img {
    .title {
      font-size: 1.8em;
     }
-  section {
+   section {
     padding: 80px 20px;
   }
   .main h2 {
-     font-size: 2em;
+     font-size: 1em;
   }
   .main h3 {
-    font-size: 2.3em;
+    font-size: 1.6em;
   }
   .content {
     flex-direction: column;
@@ -287,7 +287,7 @@ img {
     
   }
   .product-card {
-  margin: 10px;
+  margin: 10px 0;
 }
   .main {
     padding: 100px 20px;
